        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////


[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* feat: Add `log_level` central config support. {pull}1908[#1908] +
  Spec: https://github.com/elastic/apm/blob/master/specs/agents/logging.md

[float]
===== Bug fixes


[[release-notes-3.9.0]]
==== 3.9.0 - 2020/11/30

[float]
===== Features

* feat: support fastify 3 {pull}1891[#1891] +
  Adds .default and .fastify module.exports to instrumented fastify function
  for 3.x line, and prefers req.routerMethod and req.routerPath for
  transaction name
* feat: Set "destination" context on spans for "mongodb". {pull}1893[#1893] +
  This allows Kibana APM Service Maps to show a "mongodb" node for services using
  the https://www.npmjs.com/package/mongodb[mongodb] package (which includes
  mongoose and mongojs).
* feat: transactionIgnoreUrl wildcard matching {pull}1870[#1870] +
  Allows users to ignore URLs using simple wildcard matching patterns that behave
  the same across language agents. See https://github.com/elastic/apm/issues/144

[float]
===== Bug fixes

* fix: treat set-cookie in response headers as sensitive data {pull}1886[#1886]
* fix: Synchronous spans would never have `span.sync == true`. {pull}1879[#1879]


[[release-notes-3.8.0]]
==== 3.8.0 - 2020/11/09

[float]
===== Features

* feat: expand k8s pod ID discovery regex {pull}1863[#1863]
* feat: implements tracestate {pull}1828[#1828] +
  Expands support for the W3C Trace Context specification by adding a tracestate
  header implementation, and uses this new header to track the Elastic
  transaction sample rate across a trace's service boundaries.
* feat: add span and transaction outcome {pull}1824[#1824] +